--- a/templates/principal.html
+++ b/templates/principal.html
@@ -13,7 +13,7 @@
         <p>Selecciona una opción para continuar:</p>
 
         <a href="/taxi-service"><button>Taxi</button></a>
-        <a href="/turismo"><button>Turismo Local y Nacional</button></a>
+        <a href="/turismo-subventana"><button>Turismo Local y Nacional</button></a>
         <a href="/alta-gama"><button>Alta Gama</button></a>
         <a href="/fletes-mudanzas"><button>Fletes y Mudanzas</button></a>
         <a href="/apoyo-hoteles"><button>Apoyo Hoteles</button></a>
