--- a/templates/alta_gama.html
+++ b/templates/alta_gama.html
@@ -46,7 +46,9 @@
             </a>
         {% endfor %}
         <div style="text-align: center; margin-top: 20px;">
-            <a href="/alta-gama" style="text-decoration: none; background-color: #4facfe; color: white; padding: 10px 20px; border-radius: 5px; font-size: 1em;">Volver a la Página Principal</a>
+<a href="/principal" style="text-decoration: none; background-color: #FFD700; color: #001f3f; padding: 10px 20px; border-radius: 5px; font-size: 1em;">
+    Volver a la Página Principal
+</a>
         </div>
     </div>
 </body>
