--- a/templates/formulario_alta_gama.html
+++ b/templates/formulario_alta_gama.html
@@ -50,6 +50,11 @@
             <textarea id="detalles" name="detalles"></textarea>
 
             <button type="submit">Enviar Solicitud</button>
+
+<a href="/principal" style="text-decoration: none; background-color: #FFD700; color: #001f3f; padding: 10px 20px; border-radius: 5px; font-size: 1em;">
+    Volver a la Página Principal
+</a>
+
         </form>
     </div>
 </body>
